--- a/src/components/assets/css/Wraper.css
+++ b/src/components/assets/css/Wraper.css
@@ -81,13 +81,13 @@ img, svg {
 /* Container styles */
 
 /* Specific component styles */
-.banner-section {
+/* .banner-section {
     background-image: url(https://mama567.com/assets/Section%201/Rectangle%201.png);
     background-repeat: no-repeat;
     background-size: cover;
     height: -webkit-fill-available;
 
-}
+} */
 
 .download-now.move-color.d-flex.justify-content-center.align-items-center {
     /* Add your styles here */
