--- a/src/components/assets/css/ChartDetails.css
+++ b/src/components/assets/css/ChartDetails.css
@@ -31,3 +31,34 @@ table{
     display: flex;
  }
 }
+
+ 
+.kalyan-chart-number-black{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-black);
+   
+}
+
+.kalyan-chart-number-red{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-red);
+   
+}
+
+.pana-chart-main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+ 
+}
+
+.td-width-13{
+    width: 13%;
+}
